# Maverick

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH_AUDIT.md  LAUNCH_CHECKLIST.md  MAINTAINERS.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude/hooks/: session-start.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  feature.yml  feature_request.md
.github/workflows/: agent-on-pr.yml  ci.yml  conventional-commits.yml  desktop.yml  docs.yml  github-action.yml  homebrew-bump.yml  mcp-client-csharp.yml  mcp-client-rust.yml  mcp-clients.yml  publish.yml  release.yml
apps/installer-cli/: README.md  pyproject.toml
apps/installer-cli/maverick_installer/: __init__.py  bridge.py  main.py  models.py  wizard.py
apps/installer-cli/tests/: test_bridge.py  test_bridge_consumer_flow.py  test_entrypoint_and_abort.py  test_models.py  test_wizard_advanced.py  test_wizard_allowlist.py  test_wizard_consumer_mode.py  test_wizard_env_perms.py  test_wizard_fast_sandbox.py  test_wizard_helpers.py  test_wizard_parity.py  test_wizard_progress.py  test_wizard_sandbox_language.py
apps/installer-desktop/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/installer-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/installer-desktop/src-tauri/capabilities/: default.json
apps/installer-desktop/src-tauri/src/: lib.rs  main.rs
apps/vscode-extension/: README.md  package.json
benchmarks/: README.md  RESULTS.md  RUNBOOK_SWE_BENCH_PRO.md  RUNBOOK_SWE_BENCH_VERIFIED.md  fetch_swe_bench_verified.py  harness.py  preflight.py  run_swebench_pro_smoke.sh  swe_bench.py  swe_bench_smoke.txt  test_contamination_wiring.py  test_cost_accumulation.py  test_fetch_swe_bench_verified.py  test_harness.py  test_manifests_and_tracker.py  test_moat.py  test_preflight.py  test_swe_bench_adversarial_preflight.py  test_swe_bench_harness.py  test_swe_self_consistency.py  test_swe_tools_baseline.py  test_wave12_operational.py  test_wave12_patch_pipeline.py  test_wave12_run_meta.py
benchmarks/_common/: contamination_guard.py  cost_tracker.py  manifests.py
benchmarks/example-skills/: README.md  code-refactor.md  codebase-audit.md  ml-paper-summary.md  trip-planning.md  web-research.md
benchmarks/example-templates/: README.md  add-feature.md  bug-repro.md  code-review.md  compare-options.md  migrate-dependency.md  refactor.md  research-library.md  standup.md  trip-plan.md  write-tests.md
benchmarks/longhorizon/: code-refactor.md  multi-step-planning.md  research-report.md
deploy/desktop/: README.md  install.ps1  install.sh
deploy/docker/: Dockerfile  docker-compose.yml
deploy/github-action/: README.md  action.yml
docs/: LAUNCH_READINESS.md  ROADMAP-ADDITIONS.md  ROADMAP.md  a2a.md  api.md  configuration.md  deployment.md  getting-started.md  github-action.md  index.md  operations.md  plugins.md  safety.md  self-learning.md  starter-goals.md
examples/clients/rust/: .gitignore  Cargo.toml
examples/clients/rust/src/: main.rs
web/: README.md  index.html
(+47 files in other folders)
