[package]
name = "maverick-installer-desktop"
version = "0.1.0"
edition = "2021"
description = "Tauri GUI installer for Maverick"
authors = ["texasreaper62"]
license = "MIT"
repository = "https://github.com/texasreaper62/maverick"

[lib]
name = "maverick_installer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
