[package]
name = "maverick-installer-desktop"
version = "0.1.6"
edition = "2021"
description = "Tauri GUI installer for Maverick"
authors = ["cdayAI"]
license = "MIT"
repository = "https://github.com/cdayAI/maverick"

[lib]
name = "maverick_installer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Council distribution-seat fix: the package had only [lib] and a
# src/main.rs with a bare fn main(), but no [[bin]] target — cargo had
# no binary to build, so `tauri build` produced nothing. The standard
# Tauri v2 layout splits the logic into lib.rs (run()) and a thin
# main.rs that calls it; this declares the binary explicitly.
[[bin]]
name = "maverick-installer-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
